# stock-sim

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  render.yaml  requirements.txt
src/: homepage.py  main.py  queries.py  views.py
src/static/styles/: styles.css
src/templates/: homepage.html  portfolio.html
stocksim/: __init__.py  auth.py  db.py  pages.py  queries.py  schema.sql  trading.py  utils.py  views.py
stocksim/static/styles/: style.css
stocksim/templates/: base.html  homepage.html  portfolio.html
stocksim/templates/pages/: index.html  lookup.html  stockinfo.html
stocksim/templates/trading/: buy.html  portfolio.html  sell.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_pages.py  test_queries.py  test_trading.py
