[project]
name = "stock-sim"
version = "1.0.0"
description = "Stock simulator mirroring real prices with virtual money"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "yfinance",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stocksim"]